force-app/main/default/objects/Opportunity/fields/Pain_Points__c.field-meta.xml
<CustomField>
    <fullName>Pain_Points__c</fullName>
    <label>Pain Points</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Perceived Value</fullName>
            </value>
            <value>
                <fullName>Solution Fit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>