force-app/main/default/objects/Opportunity/fields/PAL_INVOICE__c.field-meta.xml
<CustomField>
    <fullName>PAL_INVOICE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LFAPAC Invoice</label>
    <type>Checkbox</type>
</CustomField>