force-app/main/default/objects/Opportunity/fields/Parent_Asset__c.field-meta.xml
<CustomField>
    <fullName>Parent_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Renewal Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>