force-app/main/default/objects/Opportunity/fields/Product_Tier_Needs_Verification__c.field-meta.xml
<CustomField>
    <fullName>Product_Tier_Needs_Verification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Drives the Product Tier verification section of the oppJoinNowVerification LWC</description>
    <label>Product Tier Needs Verification</label>
    <type>Checkbox</type>
</CustomField>