force-app/main/default/objects/Opportunity/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ZProject</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Opportunities (deprecated)</relationshipLabel>
    <relationshipName>Opportunities_del</relationshipName>
    <type>Lookup</type>
</CustomField>