force-app/main/default/objects/Opportunity/fields/Purchase_History_RenewalOpportunityCreat__c.field-meta.xml
<CustomField>
    <fullName>Purchase_History_RenewalOpportunityCreat__c</fullName>
    <formula>Parent_Asset__r.Renewal_Opportunity_Created__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase History RenewalOpportunityCreat</label>
    <type>Checkbox</type>
</CustomField>