force-app/main/default/objects/Opportunity/fields/Renewal_Hold_Comment__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Hold_Comment__c</fullName>
    <label>Renewal / Hold Comment</label>
    <type>TextArea</type>
</CustomField>