force-app/main/default/objects/Opportunity/fields/Renewal_Likelihood__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Likelihood__c</fullName>
    <inlineHelpText>Renewal Likelihood
- Renew - WILL Renew
- Upgrade - Plan upgrade
- Upgrade - Tier Upgrade
- Downgrade - Plan / Tier downgrade 
- At Risk - Salvageable - Focus
- At Risk - Not Salvageable - Focus
- Will Not Renew - Confirmed - Set to &quot;Closed/Lost&quot;</inlineHelpText>
    <label>Renewal Likelihood</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Renew</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>Upgrade Tier</fullName>
            </value>
            <value>
                <fullName>Downgrade</fullName>
            </value>
            <value>
                <fullName>At Risk - Salvageable</fullName>
            </value>
            <value>
                <fullName>At Risk - Not Salvageable</fullName>
            </value>
            <value>
                <fullName>Will Not Renew - Confirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>