force-app/main/default/objects/Opportunity/fields/Renewal_Opportunity_Closed__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Opportunity_Closed__c</fullName>
    <label>Renewal Opportunity Closed</label>
    <length>50</length>
    <type>Text</type>
</CustomField>