force-app/main/default/objects/Opportunity/fields/Signed_MSA__c.field-meta.xml
<CustomField>
    <fullName>Signed_MSA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify when MSA Agreement was signed during autojoin process. Populated via the platform integration</description>
    <label>Signed MSA</label>
    <type>Checkbox</type>
</CustomField>