force-app/main/default/objects/Opportunity/fields/Skip_Start_Date_Validation__c.field-meta.xml
<CustomField>
    <fullName>Skip_Start_Date_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Start Date Validation</label>
    <type>Checkbox</type>
</CustomField>