force-app/main/default/objects/Opportunity/fields/Sponsor_Name__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Name__c</fullName>
    <inlineHelpText>If a Bill To Address is selected, choose whether that should be the sponsor name or the Account should be the sponsor name. (This field is relevant to event sponsorship contracts only.)</inlineHelpText>
    <label>Sponsor Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>n/a</fullName>
            </value>
            <value>
                <fullName>List the name of the Account as the sponsor.</fullName>
            </value>
            <value>
                <fullName>List the name of the Bill To Name and Address as the sponsor.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>