force-app/main/default/objects/Opportunity/fields/Subscription_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Expiration_Date__c</fullName>
    <inlineHelpText>Date when training/certs under this order will expire. If unspecified, set to 12 months beyond contract start date.</inlineHelpText>
    <label>Subscription/Certs Expiration Date</label>
    <type>Date</type>
</CustomField>