force-app/main/default/objects/Opportunity/fields/Sugar_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Sugar_Assigned_To__c</fullName>
    <label>Sugar Assigned To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>