force-app/main/default/objects/Opportunity/fields/Sugar_CreatedById__c.field-meta.xml
<CustomField>
    <fullName>Sugar_CreatedById__c</fullName>
    <label>Sugar CreatedById</label>
    <length>255</length>
    <type>Text</type>
</CustomField>