force-app/main/default/objects/Opportunity/fields/Sugar_Date_Entered__c.field-meta.xml
<CustomField>
    <fullName>Sugar_Date_Entered__c</fullName>
    <label>Sugar Date Entered</label>
    <length>255</length>
    <type>Text</type>
</CustomField>