force-app/main/default/objects/Opportunity/fields/Sugar_Modified_AT__c.field-meta.xml
<CustomField>
    <fullName>Sugar_Modified_AT__c</fullName>
    <label>Sugar Modified AT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>