force-app/main/default/objects/Opportunity/fields/Sugar_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Sugar_Modified_By__c</fullName>
    <label>Sugar Modified By</label>
    <type>TextArea</type>
</CustomField>