force-app/main/default/objects/Opportunity/fields/SugarOpportunityID__c.field-meta.xml
<CustomField>
    <fullName>SugarOpportunityID__c</fullName>
    <externalId>true</externalId>
    <label>Sugar Opportunity ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>