force-app/main/default/objects/Opportunity/fields/Threats__c.field-meta.xml
<CustomField>
    <fullName>Threats__c</fullName>
    <inlineHelpText>The Threats area of your SWOT</inlineHelpText>
    <label>Threats</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>