force-app/main/default/objects/Opportunity/fields/ti_panorama_sublicense_id__c.field-meta.xml
<CustomField>
    <fullName>ti_panorama_sublicense_id__c</fullName>
    <externalId>true</externalId>
    <label>TI Panorama Sublicense ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>