force-app/main/default/objects/Opportunity/fields/Total_InitialPrice_Of_OpportunityProduct__c.field-meta.xml
<CustomField>
    <fullName>Total_InitialPrice_Of_OpportunityProduct__c</fullName>
    <label>Total InitialPrice Of OpportunityProduct</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>