force-app/main/default/objects/Opportunity/fields/Total_Products_under_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Total_Products_under_Opportunity__c</fullName>
    <label>Total Products under Opportunity</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>