force-app/main/default/objects/Opportunity/fields/Training_Modes__c.field-meta.xml
<CustomField>
    <fullName>Training_Modes__c</fullName>
    <label>Training Modes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Course Subscription</fullName>
            </value>
            <value>
                <fullName>Per-Seat Subscriptions</fullName>
            </value>
            <value>
                <fullName>eLearning</fullName>
            </value>
            <value>
                <fullName>Instructor-led Training</fullName>
            </value>
            <value>
                <fullName>Certification Subscription</fullName>
            </value>
            <value>
                <fullName>Bulk Certifications</fullName>
            </value>
            <value>
                <fullName>Certifications</fullName>
            </value>
            <value>
                <fullName>Enterprise eLearning + Certification Subscription</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>