force-app/main/default/objects/Opportunity/fields/Voting_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Voting_Contact_Email__c</fullName>
    <description>used to capture Voting Contact email from membership role for reporting</description>
    <label>Voting Contact Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>