force-app/main/default/objects/Opportunity/fields/Voting_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Voting_Contact_Name__c</fullName>
    <description>used to capture Voting Contact name from membership role for reporting</description>
    <label>Voting Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>