force-app/main/default/objects/Opportunity/recordTypes/Alternate_Funding.recordType-meta.xml
<RecordType>
    <fullName>Alternate_Funding</fullName>
    <active>true</active>
    <businessProcess>Funding</businessProcess>
    <description>Record type for Funding opportunities</description>
    <label>Alternate Funding</label>
</RecordType>