force-app/main/default/objects/Opportunity/recordTypes/Corporate_Training.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Training</fullName>
    <active>true</active>
    <businessProcess>Training</businessProcess>
    <description>Record type for corporate training opportunities</description>
    <label>Corporate Training</label>
</RecordType>