force-app/main/default/objects/Opportunity/recordTypes/Ecommerce.recordType-meta.xml
<RecordType>
    <fullName>Ecommerce</fullName>
    <active>true</active>
    <businessProcess>Event</businessProcess>
    <description>Record type for e-commerce purchases</description>
    <label>Ecommerce</label>
</RecordType>