force-app/main/default/objects/Opportunity/recordTypes/Training.recordType-meta.xml
<RecordType>
    <fullName>Training</fullName>
    <active>false</active>
    <businessProcess>Training</businessProcess>
    <description>Record type for training opportunities</description>
    <label>Training</label>
</RecordType>