force-app/main/default/objects/Opportunity/recordTypes/Training_PO.recordType-meta.xml
<RecordType>
    <fullName>Training_PO</fullName>
    <active>false</active>
    <businessProcess>Training</businessProcess>
    <label>Training PO</label>
</RecordType>