force-app/main/default/objects/Opportunity/validationRules/Future_Close_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Future_Close_Date</fullName>
    <active>false</active>
    <description>Close date must be in future</description>
    <errorConditionFormula>AND( ISNEW(), CloseDate &lt; TODAY())</errorConditionFormula>
    <errorDisplayField>CloseDate</errorDisplayField>
    <errorMessage>Close date cannot be in the past</errorMessage>
</ValidationRule>