force-app/main/default/objects/Opportunity/validationRules/Hold_requires_Hold_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Hold_requires_Hold_Reason</fullName>
    <active>true</active>
    <description>When a user sets Hold to TRUE, they must choose a Hold Reason.</description>
    <errorConditionFormula>IF(((ISPICKVAL(StageName, &apos;2. Discovery&apos; ))
||(ISPICKVAL(StageName, &apos;3. Joint Opportunity Development&apos;))
|| (ISPICKVAL(StageName, &apos;3.Quote&apos;))
|| (ISPICKVAL(StageName, &apos;Closed Won&apos;))
|| (ISPICKVAL(StageName, &apos;4. Solution Development&apos;))
|| (ISPICKVAL(StageName, &apos;4.Contract&apos;))
|| (ISPICKVAL(StageName, &apos;5. Decision Commitment&apos;))), AND(
Hold__c = TRUE,
ISPICKVAL(Hold_Reason__c, &quot;&quot;)
), false)</errorConditionFormula>
    <errorDisplayField>Hold_Reason__c</errorDisplayField>
    <errorMessage>Please select a Hold Reason.</errorMessage>
</ValidationRule>