force-app/main/default/objects/Opportunity/validationRules/Lost_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Lost_Reason_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISPICKVAL( StageName, &quot;Closed Lost&quot;), 
ISBLANK(TEXT(Loss_Reason__c)) 
)</errorConditionFormula>
    <errorDisplayField>Loss_Reason__c</errorDisplayField>
    <errorMessage>Lost reason is required at this stage</errorMessage>
</ValidationRule>