force-app/main/default/objects/Opportunity/validationRules/Member_OLIs_without_Voting_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Member_OLIs_without_Voting_Contact</fullName>
    <active>false</active>
    <description>Please update the field : Representative/Voting Contact on Opportunity lineitem before closing the Opportunity</description>
    <errorConditionFormula>AND( Membership_Product_Voting_Contacts__c &gt;0, ISPICKVAL( StageName , &apos;Closed Won&apos;), NOT( Account.IsPersonAccount ) )</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Representative/Voting Contact on Opportunity Product must be populated to Close Win Opportunity</errorMessage>
</ValidationRule>