force-app/main/default/objects/Opportunity/validationRules/Push_New_Opps_to_Approval_Flow.validationRule-meta.xml
<ValidationRule>
    <fullName>Push_New_Opps_to_Approval_Flow</fullName>
    <active>false</active>
    <description>This validation rule prohibits the changing of Opp stage to Closed-Won when the Opp Type is New Business and will force the users to use the approval process instead.</description>
    <errorConditionFormula>AND(
				RecordType.Name = &apos;Membership&apos;,
    ISPICKVAL(Type,&apos;New Business&apos;),
				ISPICKVAL(StageName,&apos;Closed Won&apos;)
)</errorConditionFormula>
    <errorMessage>New membership opportunities must use the &quot;Submit for Approval&quot; button to be Closed-Won</errorMessage>
</ValidationRule>