force-app/main/default/objects/Opportunity/validationRules/Restrict_Opportunity_Stage_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Opportunity_Stage_Change</fullName>
    <active>false</active>
    <description>Doesn&apos;t allow update beyond opportunity stage &apos;2. Discovery&apos; if there are no products associated to it.</description>
    <errorConditionFormula>AND( 
NOT(ISPICKVAL(StageName, &apos;2. Discovery&apos;)), 
$User.ProfileId&lt;&gt;$Label.Executive_Event_Sales, 
Total_Products_under_Opportunity__c=0 
)</errorConditionFormula>
    <errorMessage>A product must be added to move beyond this stage</errorMessage>
</ValidationRule>