force-app/main/default/objects/Opportunity/validationRules/Restrict_Update_Closed_Won_Opp.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Update_Closed_Won_Opp</fullName>
    <active>false</active>
    <errorConditionFormula>IF( AND ( PRIORVALUE(IsWon) = True, NOT(ISCHANGED(IsWon)) ) , TRUE , FALSE )</errorConditionFormula>
    <errorMessage>Can not update closed Won Opportunity</errorMessage>
</ValidationRule>