force-app/main/default/objects/Opportunity/validationRules/Start_and_End_Date_Required_on_Opp.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_and_End_Date_Required_on_Opp</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISCHANGED(StageName),ISPICKVAL(StageName,&apos;Closed Won&apos;),OR( OLI_without_End_Date__c &lt;&gt; 0, OLI_without_Start_Date__c &lt;&gt; 0))</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Start and End Date are Required on Opportunity before moving the stage to Closed won</errorMessage>
</ValidationRule>