force-app/main/default/objects/Opportunity/validationRules/SWOT_Criteria_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>SWOT_Criteria_Required</fullName>
    <active>false</active>
    <description>SWOT criteria fields must be complete to advance to next stage</description>
    <errorConditionFormula>AND( 
    TEXT(StageName) &lt;&gt; &quot;3. Joint Opportunity Development&quot;,
    OR( 
    ISBLANK(Strengths__c), 
    ISBLANK(Opportunities__c), 
    ISBLANK(Weaknesses__c), 
    ISBLANK(Threats__c) 
    ) 
)</errorConditionFormula>
    <errorMessage>SWOT criteria fields must be complete to advance to next stage</errorMessage>
</ValidationRule>