force-app/main/default/objects/Opportunity/validationRules/User_cannot_select_Stage1_Stage.validationRule-meta.xml
<ValidationRule>
    <fullName>User_cannot_select_Stage1_Stage</fullName>
    <active>true</active>
    <description>Users should not be able to pick stage1 on Membership users excluding System admin custom
**4/13/21 Added $Profile.Name &lt;&gt; &apos;SysAdmin Project Read-Only Access&apos; to exclude from Validation rule per SOPS-450 BUG</description>
    <errorConditionFormula>AND(ISPICKVAL(StageName, &apos;Stage 1&apos;),  AND($Profile.Name &lt;&gt; &apos;System Admin Custom&apos;,$Profile.Name &lt;&gt; &apos;SysAdmin Project Read-Only Access&apos;))</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Incorrect Stage</errorMessage>
</ValidationRule>