force-app/main/default/objects/Opportunity/listViews/Acumos_Open_Opportunities.listView-meta.xml
<ListView>
    <fullName>Acumos_Open_Opportunities</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>Last_Touched__c</columns>
    <columns>Date_to_Call_Back__c</columns>
    <columns>OPPORTUNITY.NEXT_STEP</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.NAME</field>
        <operation>contains</operation>
        <value>LF AI</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notContain</operation>
        <value>Closed Won,Closed Lost</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>notContain</operation>
        <value>kosw</value>
    </filters>
    <filters>
        <field>PAL_INVOICE__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Open Opps - LF AI</label>
    <sharedTo>
        <roleAndSubordinates>CRO</roleAndSubordinates>
    </sharedTo>
</ListView>