force-app/main/default/objects/Opportunity/listViews/AGL_Open_Opportunities.listView-meta.xml
<ListView>
    <fullName>AGL_Open_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>Last_Touched__c</columns>
    <columns>Date_to_Call_Back__c</columns>
    <columns>OPPORTUNITY.NEXT_STEP</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.NAME</field>
        <operation>contains</operation>
        <value>EdgeX</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notContain</operation>
        <value>Closed Won,Closed Lost</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.NAME</field>
        <operation>notContain</operation>
        <value>sponsorship</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.TYPE</field>
        <operation>notEqual</operation>
        <value>Renewal</value>
    </filters>
    <label>Open Opps - EdgeX</label>
    <sharedTo>
        <roleAndSubordinates>CRO</roleAndSubordinates>
    </sharedTo>
</ListView>