force-app/main/default/objects/Opportunity/listViews/Akraino_All_Opportunities.listView-meta.xml
<ListView>
    <fullName>Akraino_All_Opportunities</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>Date_to_Call_Back__c</columns>
    <columns>OPPORTUNITY.NEXT_STEP</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.NAME</field>
        <operation>contains</operation>
        <value>Akraino</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.NAME</field>
        <operation>notContain</operation>
        <value>OpenStack</value>
    </filters>
    <label>All Opps - Akraino</label>
    <sharedTo>
        <roleAndSubordinates>CRO</roleAndSubordinates>
    </sharedTo>
</ListView>